--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ Might we suggest a funny ski video instead of what you were looking for?
 Maybe start with [this one](https://www.youtube.com/watch?v=U29ggdm7Qv4)?
 Ooh, and you've got to see [this one](https://www.youtube.com/watch?v=rSwF7_kAOw8).
 While you're at it [this](https://www.youtube.com/watch?v=M840fb2WWzo) is one of my favorites.
-Lets be honest, you weren't gonna get anything done today anyway. So here's [another](https://www.youtube.com/watch?v=f0PigZDr-s8), just to help you procrastinate a little more. That's it I promise
+Lets be honest, you weren't gonna get anything done today anyway. So here's [another](https://www.youtube.com/watch?v=f0PigZDr-s8), just to help you procrastinate a little more. That's it I promise.
 
 
 Ok, [one](https://www.youtube.com/watch?v=jcla3xpqr10) more. Now I'm done.
